# dbt-sqlserver2

./: Cargo.toml  LICENSE  README.md
macros/adapters/: apply_grants.sql  catalog.sql  columns.sql  indexes.sql  metadata.sql  persist_docs.sql  relation.sql  schema.sql  show.sql
macros/materializations/models/incremental/: incremental.sql  incremental_strategies.sql  merge.sql
macros/materializations/models/table/: create_table_as.sql  table.sql
macros/materializations/models/view/: create_view_as.sql  view.sql
macros/materializations/seeds/: helpers.sql
macros/materializations/snapshots/: helpers.sql  snapshot.sql  snapshot_merge.sql  strategies.sql
macros/materializations/tests/: helpers.sql
macros/utils/: utils.sql
src/: lib.rs  mssql.rs
src/auth/: mod.rs
src/config/: mod.rs
src/metadata/: mod.rs
