[package]
name = "dbt-sqlserver2"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Community SQL Server adapter for dbt Core v2 (Rust/ADBC)"
license = "MIT"
repository = "https://github.com/danakee/dbt-sqlserver2"
keywords = ["dbt", "sqlserver", "adbc", "adapter"]

[dependencies]

[dev-dependencies]
